# QRFile

./: .gitignore  CLAUDE.md  LICENSE  README.md  Target.txt  file2qrcode.py  pyproject.toml  qrcode2file.py  requirements.txt
.claude/: settings.json
.claude/agents/: explorer.md  reviewer.md
.claude/rules/: config.md  core.md  release.md
.claude/skills/verify-qr/: SKILL.md
docs/ai/: architecture.md  release-runbook.md
src/qrfile/: errors.py
src/qrfile/cli/: main.py
src/qrfile/domain/: decoder.py  encoder.py  models.py
src/qrfile/io/: file_io.py  image_io.py
src/qrfile/services/: batch_service.py  camera_service.py
tests/: test_batch_service.py  test_decoder.py  test_encoder.py
