[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qrfile"
version = "1.0.0"
description = "QR Code file transfer tool - encode files to QR codes, decode from camera"
requires-python = ">=3.10"
dependencies = [
    "zxing-cpp>=3.0.0",
    "opencv-python>=4.11.0",
    "pillow>=12.2.0",
    "numpy>=2.4.0",
]

[project.scripts]
qrfile = "qrfile.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
